--- a/website/templates/paste.html
+++ b/website/templates/paste.html
@@ -38,6 +38,13 @@
 							Copy Link to Share
 						</button>
 					</div>
+					<div class = 'col'>
+						<form action = '/' method = 'get'>
+							<button type = 'submit' class = 'btn btn-primary'>
+								Create another Paste
+							</button>
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
