--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,7 +6,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 		<meta charset="utf-8">
-		<title>First App</title>
+		<title>PasteNCopy</title>
 	</head>
 	<body style = 'background-color: black;'>
 		<div class = 'text-center d-flex justify-content-center align-items-center' style = 'height: 100vh;'>
